# CGex2

./: .gitignore  CMakeLists.txt  README.md
config/: lighting_config.json
shaders/: model.frag
src/: Camera.h  main.cpp
src/collision/: DebugAabbDrawer.cpp
src/core/: Application.cpp  Application.h
src/render/: LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShadowMap.cpp
src/scene/: Model.cpp  Model.h  Scene.cpp  Scene.h
